--- a/frontend/src/layouts/UserLayout.module.css
+++ b/frontend/src/layouts/UserLayout.module.css
@@ -252,6 +252,7 @@
 
 .sidebarFooter {
   padding: var(--space-3);
+  padding-bottom: calc(var(--space-3) + var(--safe-area-inset-bottom));
   border-top: 1px solid rgb(255 255 255 / 10%);
   margin-top: auto;
   flex-shrink: 0;
@@ -329,7 +330,8 @@
 .mobileContentPadded {
   margin-left: 0;
   padding: var(--space-4);
-  padding-top: calc(var(--mobile-header-height, 56px) + var(--space-4));
+  padding-top: calc(var(--mobile-header-height, 56px) + var(--space-4) + var(--safe-area-inset-top));
+  padding-bottom: calc(var(--space-4) + var(--safe-area-inset-bottom));
 }
 
 @media (width <= 768px) {
@@ -343,11 +345,11 @@
   .mobileContentPadded {
     padding-left: var(--space-3);
     padding-right: var(--space-3);
-    padding-bottom: var(--space-3);
+    padding-bottom: calc(var(--space-3) + var(--safe-area-inset-bottom));
   }
 
   .mobileContentPadded {
-    padding-top: calc(var(--mobile-header-height-sm, 52px) + var(--space-3));
+    padding-top: calc(var(--mobile-header-height-sm, 52px) + var(--space-3) + var(--safe-area-inset-top));
   }
 
   .sidebar.mobile {
@@ -383,10 +385,10 @@
   .mobileContentPadded {
     padding-left: var(--space-2);
     padding-right: var(--space-2);
-    padding-bottom: var(--space-2);
+    padding-bottom: calc(var(--space-2) + var(--safe-area-inset-bottom));
   }
 
   .mobileContentPadded {
-    padding-top: calc(var(--mobile-header-height-sm, 52px) + var(--space-2));
+    padding-top: calc(var(--mobile-header-height-sm, 52px) + var(--space-2) + var(--safe-area-inset-top));
   }
 }
